# coalign

./: Cargo.toml  README.md
benches/: mixed_ops.rs  realign_values.rs  scalar_add.rs  vector_add.rs
src/: coalignment.rs  errors.rs  lib.rs  simd.rs  vector_mapping.rs  vector_ops.rs
tests/: smoke.rs
