[package]
name = "coalign"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "simple_vector_add"

[dependencies]
bytemuck = { version = "1.25.0" }
pulp = { version = "0.22.2", features = ["macro"] }
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8.2"
