[package]
name = "coalign"
version = "0.1.0"
edition = "2024"
description = "Fast arithmetic over keyed numeric maps"
repository = "https://github.com/jathoms/coalign"
license = "MIT"

[[bench]]
harness = false
name = "vector_add"

[[bench]]
harness = false
name = "scalar_add"

[[bench]]
harness = false
name = "realign_values"

[[bench]]
harness = false
name = "mixed_ops"

[dependencies]
bytemuck = { version = "1.25.0" }
paste = "1.0.15"
pulp = { version = "0.22.2", features = ["macro", "std", "x86-v3", "x86-v4"] }
rustc-hash = "2.1.2"
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.1"
